2008-11-18  Jose Dapena Paz  <jdapena@igalia.com>

	* Avoid criticals on calling can_idle if queue does not have service.

2008-11-17  Martin Bonnin  <martinbonnin@gmail.com>

	* libtinymail-camel/tny-camel-store-account.c: 2 small bugfixes in 
	tny_camel_store_account_store_refresh().
	- fix a reference leak
	- fix we were reporting the subfolders to the observer instead of 
	  just the folders

2008-11-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: several bugfixes. Fixed an
	invalid comparison (a typo most likely). Fixed several memory
	leaks as well in some lists that were not freed.
	(load_folder_no_lock): removed a duplicated instruction.
	Added several initializations of cancelled field all around the
	code.
	(tny_camel_folder_copy_shared): removed needless code and fixed a
	memory leak.
	(tny_camel_folder_get_folders_default): fixed an useless asignment

	* libtinymail-camel/tny-camel-mime-part-priv.h: Moved a function
	header into the #ifdef

2008-11-13  Thomas Guillem  <thomas.guillem@gmail.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-message-cache.c:
	Change the default cache filename from "uid." to "uid.~" in order to
	keep compatibility with FAT32 partitions. (a FAT32 file can't end with '.')
	Old cache files ("uid.") are still compatible.

2008-11-10  Jose Dapena Paz  <jdapena@igalia.com>

	Complete rework of the lock behavior of Tinymail
	(camel) imap IDLE implementation.

        The problem we want to fix is: sometimes IDLE thread causes
	deathlocks (connect lock, idle lock, g_thread_join, etc).
	This happens easily when there are disconnects, or
	when we switch fast among folders.

        The main changes are:
        * Provided a count of reasons to stop idle because of connect lock.
        * If a caller has taken connect lock, then it should do the send done
	stuff itself.
        * Idle thread has the connect lock always when it's in the body of the
	loop.