@@ -1,3 +1,9 @@
+2008-11-19  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
+	Remove calls to camel_imap_folder_start_idle that could happen even
+	when idle was locked by an operation, causing hangs.
+
 2008-11-18  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* Avoid criticals on calling can_idle if queue does not have service.
